syntax = "proto3";
package web;

option go_package = "web/v1;web";

import "validate/validate.proto";

// 添加联系人申请接口请求参数
message ContactApplyCreateRequest{
  int32 user_id = 1[(validate.rules).int32.gte = 1];
  string remark = 2 [(validate.rules).string.min_len = 1];
}

// 添加联系人申请接口响应参数
message ContactApplyCreateResponse{}

// 同意联系人申请接口请求参数
message ContactApplyAcceptRequest{
  int32 apply_id = 1 [(validate.rules).int32.gte = 1];
  string remark = 2 [(validate.rules).string.min_len = 1];
}

// 同意联系人申请接口响应参数
message ContactApplyAcceptResponse{}

// 拒绝联系人申请接口请求参数
message ContactApplyDeclineRequest{
  int32 apply_id = 1 [(validate.rules).int32.gte = 1];
  string remark = 2 [(validate.rules).string.min_len = 1];
}

// 拒绝联系人申请接口响应参数
message ContactApplyDeclineResponse{}

// 联系人申请列表接口请求参数
message ContactApplyListRequest{}

// 联系人申请列表接口响应参数
message ContactApplyListResponse{
  message Item{
    int32 id = 1;
    int32 user_id = 2;
    int32 friend_id = 3;
    string remark = 4;
    string nickname = 5;
    string avatar = 6;
    string created_at = 7;
  }

  repeated Item items = 1;
}